# CAD-converter

./: CMakeLists.txt  README.md
cmake/: OpenCascadeWin.cmake
doc/: 3rdparty_licenses.md
i18n/: mayo_en.ts  mayo_fr.ts  mayo_zh.ts  messages.cpp
scripts/: bump-version.rb
src/: mayo_version.h.cmake
src/app/: app_context.cpp  app_context.h  app_module.cpp  app_module.h  app_module_properties.cpp  app_module_properties.h  app_ui_state.cpp  app_ui_state.h  button_flat.cpp  button_flat.h  command_system_information.cpp  command_system_information_occopengl.cpp  command_system_information_occopengl.h  commands_api.cpp  commands_api.h  commands_display.cpp  commands_display.h  commands_file.cpp  commands_file.h  commands_help.cpp  commands_help.h  commands_tools.cpp  commands_tools.h  commands_window.cpp  commands_window.h  dialog_about.cpp  dialog_about.h  dialog_about.ui  dialog_inspect_xde.cpp  dialog_inspect_xde.h  dialog_inspect_xde.ui  dialog_options.cpp  dialog_options.h  dialog_options.ui  dialog_save_image_view.cpp  dialog_save_image_view.h  dialog_save_image_view.ui  dialog_task_manager.cpp  dialog_task_manager.h  dialog_task_manager.ui  (+81 more)
src/app/windows/: win_taskbar_global_progress.cpp  win_taskbar_global_progress.h
src/base/: application.cpp  application.h  application_item.cpp  application_item.h  application_item_selection_model.cpp  application_item_selection_model.h  application_ptr.h  bnd_utils.cpp  bnd_utils.h  brep_utils.cpp  brep_utils.h  caf_utils.cpp  caf_utils.h  cpp_utils.h  document.cpp  document.h  document_ptr.h  document_tree_node.cpp  document_tree_node.h  enumeration.cpp  enumeration.h  enumeration_fromenum.h  filepath.h  filepath_conv.h  geom_utils.cpp  geom_utils.h  global.h  io_format.cpp  io_format.h  io_parameters_provider.h  io_reader.cpp  io_reader.h  io_single_format_factory.h  io_system.cpp  io_system.h  io_writer.cpp  io_writer.h  label_data.cpp  label_data.h  libtree.h  (+57 more)
src/cli/: cli_export.cpp  cli_export.h  console.cpp  console.h  main.cpp
src/graphics/: ais_text.cpp  ais_text.h  graphics_create_driver.cpp  graphics_create_virtual_window.cpp  graphics_mesh_data_source.cpp  graphics_mesh_data_source.h  graphics_mesh_object_driver.cpp  graphics_mesh_object_driver.h  graphics_object_driver.cpp  graphics_object_driver.h  graphics_object_ptr.h  graphics_owner_ptr.h  graphics_point_cloud_object_driver.cpp  graphics_point_cloud_object_driver.h  graphics_scene.cpp  graphics_scene.h  graphics_shape_object_driver.cpp  graphics_shape_object_driver.h  graphics_texture2d.h  graphics_utils.cpp  graphics_utils.h  graphics_view_ptr.h
src/gui/: gui_application.cpp  gui_application.h  gui_document.cpp  gui_document.h  v3d_view_camera_animation.cpp  v3d_view_camera_animation.h  v3d_view_controller.cpp  v3d_view_controller.h
src/io_assimp/: io_assimp.cpp  io_assimp.h  io_assimp_reader.cpp  io_assimp_reader.h
src/io_dxf/: aci_table.h  dxf.cpp  io_dxf.cpp  io_dxf.h
src/io_gmio/: io_gmio.cpp  io_gmio.h  io_gmio_amf_writer.cpp  io_gmio_amf_writer.h
src/io_image/: io_image.cpp  io_image.h
src/io_occ/: io_occ.cpp  io_occ.h  io_occ_base_mesh.cpp  io_occ_base_mesh.h  io_occ_brep.cpp  io_occ_brep.h  io_occ_caf.cpp  io_occ_caf.h  io_occ_common.cpp  io_occ_common.h  io_occ_gltf_reader.cpp  io_occ_gltf_reader.h  io_occ_gltf_writer.cpp  io_occ_gltf_writer.h  io_occ_iges.cpp  io_occ_iges.h  io_occ_obj_reader.cpp  io_occ_obj_reader.h  io_occ_obj_writer.cpp  io_occ_obj_writer.h  io_occ_step.cpp  io_occ_step.h  io_occ_stl.cpp  io_occ_stl.h  io_occ_vrml_reader.cpp  io_occ_vrml_reader.h  io_occ_vrml_writer.cpp  io_occ_vrml_writer.h
src/io_off/: io_off_reader.cpp  io_off_reader.h  io_off_writer.cpp  io_off_writer.h
src/io_ply/: io_ply_reader.cpp  io_ply_reader.h  io_ply_writer.cpp  io_ply_writer.h
src/measure/: measure_display.cpp  measure_display.h  measure_tool.cpp  measure_tool.h  measure_tool_brep.cpp  measure_tool_brep.h  measure_type.h
src/qtbackend/: qsettings_storage.cpp  qsettings_storage.h  qt_animation_backend.cpp  qt_animation_backend.h  qt_app_translator.cpp  qt_app_translator.h  qt_signal_thread_helper.cpp  qt_signal_thread_helper.h
src/qtcommon/: filepath_conv.h  log_message_handler.cpp  log_message_handler.h  qstring_conv.cpp  qstring_conv.h  qtcore_utils.cpp  qtcore_utils.h
tests/: main.cpp  test_app.cpp  test_app.h  test_base.cpp  test_base.h  test_io.cpp  test_io.h  test_measure.cpp  test_measure.h
